<?xml version="1.0"?>
<package format="2">
  <name>beginer_tutorials</name>
  <version>0.0.0</version>
  <description>Shows general information about a package</description>

  
  <maintainer email="rt-user@todo.todo">rt-user</maintainer>


  
  <license>BSD</license>


 
  <url type="website">http://wiki.ros.org/beginer_tutorials</url>


  
  <author email="dags.macs@gmail.com">Dags Macs</author>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  
  <export>
    

  </export>
</package>
